--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
   <canvas></canvas>
   <input type="range" id="line-width" max="10" min="1" value="5"/>
+  <input type="color" id="color">
 </body>
 </html>
