:memo: feat: Add eraser and reset func
지우기와 초기화 기능 추가

--- a/index.html
+++ b/index.html
@@ -75,5 +75,7 @@
     ></div>
   </div>
   <button id="mode-btn">채우기</button>
+  <button id="destroy-btn">초기화</button>
+  <button id="eraser-btn">지우기</button>
 </body>
 </html>
