:memo: feat: Add insert text func
텍스트 넣기 기능 추가

--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
   <button id="mode-btn">채우기</button>
   <button id="destroy-btn">초기화</button>
   <button id="eraser-btn">지우기</button>
+  <input type="text" placeholder="입력 후 더블클릭" id="text"/>
 </body>
 </html>
