:memo: feat: Add save func
이미지 저장 기능 추가

--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
   <button id="destroy-btn">초기화</button>
   <button id="eraser-btn">지우기</button>
   <input type="text" placeholder="입력 후 더블클릭" id="text"/>
+  <button id="save">저장하기</button>
 </body>
 </html>
